Correctly staged commit: Corrected descriptor path and added plugin in POM for correct JUnit tests during build process.